# linux-from-bazel

./: .bazelrc.example  .gitignore  BUILD  CLAUDE.md  MODULE.bazel  README.md  WORKSPACE  deps.bzl  versions.bzl
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
.github/: dependabot.yml
.github/workflows/: main-verification.yml
doc/: bigpicture.dot
doc/adr/: 0001-record-architecture-decisions.md  0002-use-tmp-as-lfs-prefix.md  0003-lightweight-chroot.md
scripts/: bigpicture.sh  find_pkg_for_file  run_bwrap.sh  version-check.sh
